# translator

./: CMakeLists.txt  plasma-applet-translator.desktop  plasma-translator.cpp  plasma-translator.h
